--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,68 +3,99 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
+@article{ju_dynamic_2020,
+  abbr={Nat Neurosci},
+  title={Dynamic representations in networked neural systems},
+  author={Ju, H., and Bassett, D.S.},
+  abstract={A group of neurons can generate patterns of activity that represent information about stimuli; subsequently, the group can transform and transmit activity patterns across synapses to spatially distributed areas. Recent studies in neuroscience have begun to independently address the two components of information processing: the representation of stimuli in neural activity and the transmission of information in networks that model neural interactions. Yet only recently are studies seeking to link these two types of approaches. Here we briefly review the two separate bodies of literature; we then review the recent strides made to address this gap. We continue with a discussion of how patterns of activity evolve from one representation to another, forming dynamic representations that unfold on the underlying network. Our goal is to offer a holistic framework for understanding and describing neural information representation and transmission while revealing exciting frontiers for future research.},
+  journal={Nature Neuroscience},
+  volume={23},
+  pages={908--917},
+  year={2020},
+  month={June},
+  doi={10.1038/s41593-020-0653-3},
+  url={https://www.nature.com/articles/s41593-020-0653-3},
+  html={https://www.nature.com/articles/s41593-020-0653-3},
   selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{srivastava_models_2020,
+	title = {Models of communication and control for brain networks: distinctions, convergence, and future outlook},
+	shorttitle = {Models of communication and control for brain networks},
+  author = {Srivastava, P., and Nozari, E., and Kim, J.Z., and Ju, H., and Zhou, D., and Becker, C., and Pasqualetti, F., and Bassett, D.S.},
+	abstract = {Recent advances in computational models of signal propagation and routing in the human brain have underscored the critical role of white matter structure. A complementary approach has utilized the framework of network control theory to better understand how white matter constrains the manner in which a region or set of regions can direct or control the activity of other regions. Despite the potential for both of these approaches to enhance our understanding of the role of network structure in brain function, little work has sought to understand the relations between them. Here, we seek to explicitly bridge computational models of communication and principles of network control in a conceptual review of the current literature. By drawing comparisons between communication and control models in terms of the level of abstraction, the dynamical complexity, the dependence on network attributes, and the interplay of multiple spatiotemporal scales, we highlight the convergence of and distinctions between the two frameworks. Based on the understanding of the intertwined nature of communication and control in human brain networks, this work provides an integrative perspective for the field and outlines exciting directions for future work.},
+	journal = {Network Neuroscience},
+  abbr={Net Neuro},
+	month = {July},
+	year = {2020},
+  doi = {10.1162/netn_a_00158 },
+  url = {https://doi.org/10.1162/netn_a_00158},
+  html = {https://doi.org/10.1162/netn_a_00158},
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{tang_control_2020,
+  title = {Control of brain network dynamics across diverse scales of space and time},
+  author = {Tang, E. and Ju, H. and Baum, G.L. and Roalf, D.R. and Satterthwaite, T.D. and Pasqualetti, F. and Bassett, D.S.},
+  abstract = {The human brain is composed of distinct regions that are each associated with particular functions and distinct propensities for the control of neural dynamics. However, the relation between these functions and control profiles is poorly understood, as is the variation in this relation across diverse scales of space and time. Here we probe the relation between control and dynamics in brain networks constructed from diffusion tensor imaging data in a large community sample of young adults. Specifically, we probe the control properties of each brain region and investigate their relationship with dynamics across various spatial scales using the Laplacian eigenspectrum. In addition, through analysis of regional modal controllability and partitioning of modes, we determine whether the associated dynamics are fast or slow, as well as whether they are alternating or monotone. We find that brain regions that facilitate the control of energetically easy transitions are associated with activity on short length scales and slow timescales. Conversely, brain regions that facilitate control of difficult transitions are associated with activity on long length scales and fast timescales. Built on linear dynamical models, our results offer parsimonious explanations for the activity propagation and network control profiles supported by regions of differing neuroanatomical structure.},
+  journal = {Phys. Rev. E},
+  abbr = {PRE},
+  volume = {101},
+  issue = {6},
+  pages = {062301},
+  numpages = {13},
+  year = {2020},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevE.101.062301},
+  url = {https://link.aps.org/doi/10.1103/PhysRevE.101.062301},
+  html = {https://link.aps.org/doi/10.1103/PhysRevE.101.062301},
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{ju_network_2019,
+	title = {Network structure of cascading neural systems predicts stimulus propagation and recovery},
+	abstract = {Many neural systems display cascading behavior characterized by uninterrupted sequences of neuronal firing. This gap precludes an understanding of how variations in network structure manifest in neural dynamics and either support or impinge upon information processing. Here, we develop a theoretical understanding of how network structure supports information processing through network dynamics, and we validate our theory with empirical data. Using a generalized spiking model and mathematical tools from linear systems theory, network control theory, and information theory, we show how network structure can be designed to temporally extend the propagation and recovery of certain stimulus patterns. Moreover, we observe cycles as structural and dynamic motifs that are prevalent in such networks. Broadly, our results demonstrate how cascading neural networks could contribute to cognitive faculties that require lasting activation of neuronal patterns, such as working memory or attention.},
+	journal = {arXiv [q-bio]},
+  abbr = {arXiv},
+	author = {Ju, H., and Kim, J.Z., and Bassett, D.S.},
+	month = {Nov},
+	year = {2019},
+  doi = {arXiv:1812.09361},
+  url = {http://arxiv.org/abs/1812.09361},
+  html = {http://arxiv.org/abs/1812.09361},
+  pdf = {https://arxiv.org/pdf/1812.09361}
+}
+
+@article{ju_limited_2017,
+	title = {Limited synapse overproduction can speed development but sometimes with long-term energy and discrimination penalties},
+	volume = {13},
+	issn = {1553-7358},
+	url = {https://dx.plos.org/10.1371/journal.pcbi.1005750},
+  html = {https://dx.plos.org/10.1371/journal.pcbi.1005750},
+  abstract = {Neural circuit development requires that synapses be formed between appropriate neurons. In addition, for a hierarchical network, successful development involves a sequencing of developmental events. It has been suggested that one mechanism that helps speed up development of proper connections is an early overproduction of synapses. Using a computational model of synapse development, such as adaptive synaptogenesis, it is possible to study such overproduction and its role in speeding up development; it is also possible to study other outcomes of synapse overproduction that are seemingly new to the literature. With a fixed number of neurons, adaptive synaptogenesis can control the speed of synaptic development in two ways: by altering the rate constants of the adaptive processes or by altering the initial number of rapidly but non-selectively accrued synapses. Using either mechanism, the simulations reveal that synapse overproduction appears as an unavoidable concomitant of rapid adaptive synaptogenesis. However, the shortest development times, which always produces the greatest amount of synapse overproduction, reduce adult performance by three measures: energy use, discrimination error rates, and proportional neuron allocation. Thus, the results here lead to the hypothesis that the observed speed of neural network development represents a particular inter-generational compromise: quick development benefits parental fecundity while slow development benefits offspring fecundity.},
+	doi = {10.1371/journal.pcbi.1005750},
+	number = {9},
+	journal = {PLOS Computational Biology},
+  abbr = {PCB},
+	author = {Ju, H., and Colbert, C.M., and Levy, W.B.},
+	editor = {Graham, Lyle J.},
+	month = {Sep},
+	year = {2017}
+}
+
+@article{ju_development_2015,
+	title = {Development of a novel remote-controlled and self-contained audiovisual-aided interactive system for immobilizing claustrophobic patients},
+  abstract = {In radiotherapy, only a few immobilization systems, such as open‐face mask and head mold with a bite plate, are available for claustrophobic patients with a certain degree of discomfort. The purpose of this study was to develop a remote‐controlled and self‐contained audiovisual (AV)‐aided interactive system with the iPad mini with Retina display for intrafractional motion management in brain/H&N (head and neck) radiotherapy for claustrophobic patients. The self‐contained, AV‐aided interactive system utilized two tablet computers: one for AV‐aided interactive guidance for the subject and the other for remote control by an operator. The tablet for audiovisual guidance traced the motion of a colored marker using the built‐in front‐facing camera, and the remote control tablet at the control room used infrastructure Wi‐Fi networks for real‐time communication with the other tablet. In the evaluation, a programmed QUASAR motion phantom was used to test the temporal and positional accuracy and resolution. Position data were also obtained from ten healthy volunteers with and without guidance to evaluate the reduction of intrafractional head motion in simulations of a claustrophobic brain or H&N case. In the phantom study, the temporal and positional resolution was 24 Hz and 0.2 mm. In the volunteer study, the average superior–inferior and right–left displacement was reduced from 1.9 mm to 0.3 mm and from 2.2 mm to 0.2 mm with AV‐aided interactive guidance, respectively. The superior–inferior and right–left positional drift was reduced from 0.5 mm/min to 0.1 mm/min and from 0.4 mm/min to 0.04 mm/min with audiovisual‐aided interactive guidance. This study demonstrated a reduction in intrafractional head motion using a remote‐controlled and self‐contained AV‐aided interactive system of iPad minis with Retina display, easily obtainable and cost‐effective tablet computers. This approach can potentially streamline clinical flow for claustrophobic patients without a head mask and also allows patients to practice self‐motion management before radiation treatment delivery.},
+	volume = {16},
+	issn = {15269914},
+	url = {http://doi.wiley.com/10.1120/jacmp.v16i3.5359},
+  html = {http://doi.wiley.com/10.1120/jacmp.v16i3.5359},
+  pdf = {https://aapm.onlinelibrary.wiley.com/doi/epdf/10.1120/jacmp.v16i3.5359},
+	doi = {10.1120/jacmp.v16i3.5359},
+	number = {3},
+	journal = {Journal of Applied Clinical Medical Physics},
+  abbr = {JAMP},
+	author = {Ju, H. and Kim, S. and Read, P. and Trifiletti, D. and Harrell, A. and Libby, B. and Kim, T.},
+	month = {May},
+	year = {2015},
+	pages = {216--224}
 }
