--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,20 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{ju_cascade_2020,
+	Abstract = {Many neural systems display spontaneous, spatiotemporal patterns of neural activity that are crucial for information processing. While these cascading patterns presumably arise from the underlying network of synaptic connections between neurons, the precise contribution of the network's local and global connectivity to these patterns and information processing remains largely unknown. Here, we demonstrate how network structure supports information processing through network dynamics in empirical and simulated spiking neurons using mathematical tools from linear systems theory, network control theory, and information theory. In particular, we show that activity, and the information that it contains, travels through cycles in real and simulated networks. Broadly, our results demonstrate how cascading neural networks could contribute to cognitive faculties that require lasting activation of neuronal patterns, such as working memory or attention.},
+	Author = {H. Ju and J.Z. Kim and J.M. Beggs and D.S. Bassett},
+	Journal = {Journal of Neural Engineering},
+  abbr={JNE},
+	Title = {Network structure of cascading neural systems predicts stimulus propagation and recovery},
+	Url = {http://iopscience.iop.org/10.1088/1741-2552/abbff1},
+  html = {http://iopscience.iop.org/10.1088/1741-2552/abbff1},
+  pdf = {https://iopscience.iop.org/article/10.1088/1741-2552/abbff1/pdf},
+  doi={10.1088/1741-2552/abbff1},
+	Year = {2020},
+  selected={true}
+}
+
 @article{ju_dynamic_2020,
   abbr={Nat Neurosci},
   title={Dynamic representations in networked neural systems},
@@ -49,20 +63,6 @@
   doi = {10.1103/PhysRevE.101.062301},
   url = {https://link.aps.org/doi/10.1103/PhysRevE.101.062301},
   html = {https://link.aps.org/doi/10.1103/PhysRevE.101.062301},
-}
-
-@article{ju_network_2019,
-	title = {Network structure of cascading neural systems predicts stimulus propagation and recovery},
-	abstract = {Many neural systems display cascading behavior characterized by uninterrupted sequences of neuronal firing. This gap precludes an understanding of how variations in network structure manifest in neural dynamics and either support or impinge upon information processing. Here, we develop a theoretical understanding of how network structure supports information processing through network dynamics, and we validate our theory with empirical data. Using a generalized spiking model and mathematical tools from linear systems theory, network control theory, and information theory, we show how network structure can be designed to temporally extend the propagation and recovery of certain stimulus patterns. Moreover, we observe cycles as structural and dynamic motifs that are prevalent in such networks. Broadly, our results demonstrate how cascading neural networks could contribute to cognitive faculties that require lasting activation of neuronal patterns, such as working memory or attention.},
-	journal = {arXiv [q-bio]},
-  abbr = {arXiv},
-	author = {Ju, H., and Kim, J.Z., and Bassett, D.S.},
-	month = {Nov},
-	year = {2019},
-  doi = {arXiv:1812.09361},
-  url = {http://arxiv.org/abs/1812.09361},
-  html = {http://arxiv.org/abs/1812.09361},
-  pdf = {https://arxiv.org/pdf/1812.09361}
 }
 
 @article{ju_limited_2017,
