--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,22 @@
 
 @string{aps = {American Physical Society,}}
 
+
+@article{ju_network_2020,
+	title = {The network structure of scientific revolutions},
+	copyright = {All rights reserved},
+	html = {http://arxiv.org/abs/2010.08381},
+	pdf = {https://arxiv.org/pdf/2010.08381.pdf},
+	abbr = {arXiv},
+	abstract = {Philosophers of science have long postulated how collective scientific knowledge grows. Empirical validation has been challenging due to limitations in collecting and systematizing large historical records. Here, we capitalize on the largest online encyclopedia to formulate knowledge as growing networks of articles and their hyperlinked inter-relations. We demonstrate that concept networks grow not by expanding from their core but rather by creating and filling knowledge gaps, a process which produces discoveries that are more frequently awarded Nobel prizes than others. Moreover, we operationalize paradigms as network modules to reveal a temporal signature in structural stability across scientific subjects. In a network formulation of scientific discovery, data-driven conditions underlying breakthroughs depend just as much on identifying uncharted gaps as on advancing solutions within scientific communities.},
+	urldate = {2020-10-19},
+	journal = {arXiv:2010.08381 [physics]},
+	author = {Ju, Harang and Zhou, Dale and Blevins, Ann S. and Lydon-Staley, David M. and Kaplan, Judith and Tuma, Julio R. and Bassett, Danielle S.},
+	month = oct,
+	year = {2020},
+	selected={true}
+}
+
 @article{ju_cascade_2020,
 	Abstract = {Many neural systems display spontaneous, spatiotemporal patterns of neural activity that are crucial for information processing. While these cascading patterns presumably arise from the underlying network of synaptic connections between neurons, the precise contribution of the network's local and global connectivity to these patterns and information processing remains largely unknown. Here, we demonstrate how network structure supports information processing through network dynamics in empirical and simulated spiking neurons using mathematical tools from linear systems theory, network control theory, and information theory. In particular, we show that activity, and the information that it contains, travels through cycles in real and simulated networks. Broadly, our results demonstrate how cascading neural networks could contribute to cognitive faculties that require lasting activation of neuronal patterns, such as working memory or attention.},
 	Author = {H. Ju and J.Z. Kim and J.M. Beggs and D.S. Bassett},
@@ -13,8 +29,7 @@
   html = {http://iopscience.iop.org/10.1088/1741-2552/abbff1},
   pdf = {https://iopscience.iop.org/article/10.1088/1741-2552/abbff1/pdf},
   doi={10.1088/1741-2552/abbff1},
-	Year = {2020},
-  selected={true}
+	Year = {2020}
 }
 
 @article{ju_dynamic_2020,
