--- a/_drafts/2020-10-20-wikinet.md
+++ b/_drafts/2020-10-20-wikinet.md
@@ -5,30 +5,24 @@ description:
 date: 2020-10-20
 ---
 
-> If I have seen further it is by standing on the shoulders of Giants. - Isaac Newton, 1675
+> If I have seen further it is by standing on the shoulders of Giants.
+> - Isaac Newton, 1675
 
-## Doing science
+In PhD training, students are tasked with thinking about new questions to answer. That is the purpose of PhD training, to find something new and noteworthy. In my training, I would come up with a few questions that I thought would be impactful, and most of the time, someone would have already answered that question. That *is* a good thing, that scientists have already thought about most of the questions that I could ask. But when my job is to find something new, it doesn't help that I can't think of anything new to ask.
 
-As 
+The obvious answer to this problem (besides perhaps my incompetence) is that most scientists know most of the knowledge. And the questions that one can ask are dependent on what you know. If you don't know anything about XYZ, you can't ask any meaningful questions about XYZ. But if you do know about XYZ, then asking questions about XYZ is not so hard. In fact, Merton, a sociologist of science, claims that *multiple discoveries*, which are made independently and simultaneously by multiple scientists, are characteristic of scientific practice (1974). Here's a [list](https://en.wikipedia.org/wiki/List_of_multiple_discoveries) of multiple discoveries.
 
-#### Multiples
 ![spiderman](assets/img/spiderman-pointing.jpg)
 
-## Explore the data
+Knowing about multiples, I then asked the question: is there a way to somehow combine our existing knowledge to find out something about a new discovery before it's actually discovered? So, is there something like a *discovery function* where $discovery = f(knowledge)$? I was sure people have asked this question--this is the *curse of multiple discoveries*--and people have. Recently, Mikulak-Klucznik et al. (2020) trained an algorithm to plan the synthesis of new complex natural products.
 
-<iframe src="http://localhost:8050" width=700 height=700></iframe>
+Then, I had the idea to use a network of Wikipedia articles, many of which have history sections with years of when the topic was discovered. With people in my lab, a historian of science, and a philosopher of science, I ended up writing a [paper](http://arxiv.org/abs/2010.08381) using the Wikipedia networks that describe how the structures of concept networks change over the course of history and how they relate to theories of scientific practice by prominent 20th century philosophers of science. But I made no progress on a *discovery function*.
 
-## Code
+Now that so much of knowledge is digitized, it seems inevitable that we will come up with some kind of a *discovery function*. Of course, there is the debate of Realism vs Nominalism. Neil deGrasse Tyson often says that "the Universe is under no obligation to make sense to you". So, the discovery function will likely end up being some kind of an estimation function that requires experimentation. But a *discovery function*, or even many of them, may at least guide and facilitate the discovery process.
 
-First, go to [https://dumps.wikimedia.org/enwiki/]
-
-To
-```
-
-```
-
-Contact me on email or Twitter if you want to chat!
+Contact me by email or on Twitter if you want to chat!
 
 ## References
-* Isaac Newton, Letter to Robert Hooke, [link](https://discover.hsp.org/Record/dc-9792/Description#tabnav)
-*
+* Newton. 1675 [link](https://discover.hsp.org/Record/dc-9792).
+* Merton. 1974 https://doi.org/10.1126/science.184.4137.656.
+* Mikulak-Klucznik et al. 2020 https://doi.org/10.1038/s41586-020-2855-y.
