edit blog list page

--- a/_drafts/2020-12-09-sabbath.md
+++ b/_drafts/2020-12-09-sabbath.md
@@ -3,6 +3,7 @@ layout: post
 title: the Sabbath
 description: the command that no one cares about
 date: 2020-12-09
+img:
 ---
 
 <blockquote style="text-align: left;">
@@ -10,7 +11,7 @@ date: 2020-12-09
   Exodus 20:8-11 ESV
 </blockquote>
 
-The Sabbath is the fifth of the Ten Commandments that God gave to the Israelites in the Bible. Among the Ten Commandments are "don't murder", "don't steal", "don't idol worhsip". Those commandments are not only 
+The Sabbath is the fifth of the Ten Commandments that God gave to the Israelites in the Bible. Among the Ten Commandments are "don't murder", "don't steal", "don't idol worhsip". Those commandments are not only
 Some of those commandments form the underlying fabric of Western civilization.
 
 Thoughts on the Sabbath
