--- a/_posts/2019-05-25-cascades.md
+++ b/_posts/2019-05-25-cascades.md
@@ -3,6 +3,7 @@ layout: post
 title: structure of networks underlying neural cascades
 date: 2019-05-25
 description: how to get long spontaneous bursts of activity in neural networks
+img: /assets/img/cascades.jpg
 ---
 A cascade propagates longer in a neural network with stronger recurrent connections. The ongoing activity allows delayed recovery of stimuli and can act as working memory. [[arXiv]](https://arxiv.org/abs/1812.09361)
 
